SERVER-26370 Register incoming migrations on the ActiveMigrationsRegistry

In order to avoid race conditions where a shard could serve both as a
donor and recipient.