src/mongo/db/s/migration_destination_manager.h
@@ -36,6 +36,7 @@
 #include "mongo/bson/oid.h"
 #include "mongo/client/connection_string.h"
 #include "mongo/db/namespace_string.h"
+#include "mongo/db/s/active_migrations_registry.h"
 #include "mongo/db/s/migration_session_id.h"
 #include "mongo/s/shard_id.h"
 #include "mongo/stdx/condition_variable.h"
@@ -88,6 +89,7 @@ public:
      * Returns OK if migration started successfully.
      */
     Status start(const NamespaceString& nss,
+                 ScopedRegisterReceiveChunk scopedRegisterReceiveChunk,
                  const MigrationSessionId& sessionId,
                  const ConnectionString& fromShardConnString,
                  const ShardId& fromShard,
@@ -193,6 +195,7 @@ private:
     // Migration session ID uniquely identifies the migration and indicates whether the prepare
     // method has been called.
     boost::optional<MigrationSessionId> _sessionId;
+    boost::optional<ScopedRegisterReceiveChunk> _scopedRegisterReceiveChunk;
 
     // A condition variable on which to wait for the prepare method to be called.
     stdx::condition_variable _isActiveCV;
